apps/kyverno/kustomization/policies/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
  annotations:
    policies.kyverno.io/title: Disallow Latest Tag
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      The ':latest' tag is mutable and can lead to unexpected errors if the image changes.
      This audit-only policy checks that Pods in the first targeted namespaces use explicit,
      non-latest image tags.
spec:
  admission: true
  validationFailureAction: Audit
  background: true
  emitWarning: false
  rules:
  - name: require-image-tag
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - authentik
          - gitea
          - homepage
          - monitoring
          - paperless-ngx
    skipBackgroundRequests: true
    validate:
      allowExistingViolations: true
      message: An image tag is required.
      foreach:
      - list: request.object.spec.containers
        pattern:
          image: '*:*'
      - list: request.object.spec.initContainers || `[]`
        pattern:
          image: '*:*'
      - list: request.object.spec.ephemeralContainers || `[]`
        pattern:
          image: '*:*'
  - name: validate-image-tag
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - authentik
          - gitea
          - homepage
          - monitoring
          - paperless-ngx
    skipBackgroundRequests: true
    validate:
      allowExistingViolations: true
      message: Using a mutable image tag like latest is not allowed.
      foreach:
      - list: request.object.spec.containers
        pattern:
          image: '!*:latest'
      - list: request.object.spec.initContainers || `[]`
        pattern:
          image: '!*:latest'
      - list: request.object.spec.ephemeralContainers || `[]`
        pattern:
          image: '!*:latest'
